infrastructure/platform/base/envoy-gateway/http-https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-gw-private-https-redirect
  namespace: envoy-gateway-system
spec:
  parentRefs:
  - name: envoy-gw-private
    sectionName: wahooli-http
  - name: envoy-gw-private
    sectionName: absolutistit-http
  hostnames:
  - "*.${domain_wahoo_li:=wahoo.li}"
  - "*.${domain_absolutist_it:=absolutist.it}"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
